implemented delete actions for apps and configs

--- a/aspnet-core/src/HotSpotWeb.Core/Localization/SourceFiles/HotSpotWeb.xml
+++ b/aspnet-core/src/HotSpotWeb.Core/Localization/SourceFiles/HotSpotWeb.xml
@@ -135,5 +135,6 @@
     <text name="ApplicationCreationTime">Creation Time</text>
     
     <text name="CreateNewApplication">Create new application</text>
+    <text name="ApplicationDeleteWarningMessage">Are you sure you want to delete this application?</text>
   </texts>
 </localizationDictionary>
