--- a/aspnet-core/src/HotSpotWeb.Core/Localization/SourceFiles/HotSpotWeb.xml
+++ b/aspnet-core/src/HotSpotWeb.Core/Localization/SourceFiles/HotSpotWeb.xml
@@ -153,6 +153,13 @@
     <text name="DependencyOfficialUrl">Official Url</text>
     <text name="DependencyTargetFramework">Target Framework</text>
     <text name="CreateNewDependency">Create New Dependency</text>
+
+    <text name="GithubProfiles">Github Profiles</text>
+    <text name="GithubProfileUsername">Username</text>
+    <text name="GithubProfileToken">Token</text>
+    <text name="GithubProfileDescription">Description</text>
+    <text name="CreateNewGithubProfile">Create New Github Profile</text>
+	<text name="GithubProfileDeleteWarningMessage">Are you sure you want to delete this Github profile?</text>
 	
 	
   </texts>
